Fixes navbar header from overlapping initial content

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,1 +1,5 @@
 @import 'bootstrap';
+
+// Header //
+
+body { padding-top: 78px; }
